<?xml version="1.0"?>
<package>
  <name>vigir_simple_joint_pan</name>
  <version>0.0.0</version>
  <description>Provides a simple node for commanding back and forth joint panning motion (using a JointTrajectoryAction interface to interface with actuation)</description>

  <maintainer email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>control_msgs</build_depend>
  
  <run_depend>rospy</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>

  <export>
  </export>
  
</package>